Fixed saving shifts in user management UI and updated shift assignment algorithm

--- a/client/src/pages/desktop/schedule/tabs/schedule-setup/styles.module.css
+++ b/client/src/pages/desktop/schedule/tabs/schedule-setup/styles.module.css
@@ -41,6 +41,9 @@
   flex-direction: column;
   gap: 0.5rem;
   overflow: hidden;
+  line-height: 1.5rem;
+  cursor: pointer;
+  user-select: none;
 }
 
 .infoContent {
