--- a/client/src/pages/desktop/schedule/tabs/schedule-table/styles.module.css
+++ b/client/src/pages/desktop/schedule/tabs/schedule-table/styles.module.css
@@ -132,7 +132,7 @@
   align-items: center;
   border: 2px solid var(--text-background);
   border-radius: 1rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.75rem;
 }
 
 .scouted {
