--- a/client/src/pages/desktop/schedule/tabs/team-list/styles.module.css
+++ b/client/src/pages/desktop/schedule/tabs/team-list/styles.module.css
@@ -119,3 +119,18 @@
   border-radius: 1rem;
   margin-bottom: 1.5rem;
 }
+
+.option {
+  user-select: none;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.optionContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
